--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,4 @@
 {
-  "branches": ["main"],
+  "branches": ["main", "release/next"],
   "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator"]
 }
