ci(*): add release

--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,4 @@
 {
-  "branches": ["main", "release/next"],
+  "branches": ["main", {"name": "release/next", "prerelease": "next"}],
   "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator"]
 }
