--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,4 @@
 {
   "branches": ["main", {"name": "release/next", "prerelease": "next"}],
-  "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator"]
+  "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator", "@semantic-release/github"]
 }
