--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,4 @@
 {
-  "branches": ["release/+([0-9])?(.{+([0-9]),x}).x", "main", {"name": "release/next", "prerelease": "next"}],
-  "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator", "@semantic-release/github"]
+  "branches": ["+([0-9])?(.{+([0-9]),x}).x", "main", {"name": "release/next", "prerelease": "next"}],
+  "plugins": ["@semantic-release/commit-analyzer", "@semantic-release/release-notes-generator"]
 }
